--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <group android:checkableBehavior="single">
+    <item
+        android:id="@+id/goToVaccines"
+        android:title="Your vaccines" />
+    <item
+        android:id="@+id/goToLogout"
+        android:title="Logout/remove account" />
+    </group>
 </menu>
