--- a/app/src/main/res/layout/fragment_vaccinelist.xml
+++ b/app/src/main/res/layout/fragment_vaccinelist.xml
@@ -5,7 +5,7 @@
     android:id="@+id/vaccinelistFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VaccineListFragment">
+    tools:context=".fragments.VaccineListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvwVaccine"
