--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/testFragment">
     <fragment
         android:id="@+id/testFragment"
-        android:name="com.example.mobilevax.TestFragment"
+        android:name="com.example.mobilevax.fragments.TestFragment"
         android:label="fragment_test"
         tools:layout="@layout/fragment_test" >
     </fragment>
