--- a/app/src/main/res/layout/item_vaccine.xml
+++ b/app/src/main/res/layout/item_vaccine.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:padding="16dp">
+    android:background="@drawable/layout_border"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?selectableItemBackground"
+    android:padding="16dp"
+    android:visibility="visible">
 
     <TextView
         android:id="@+id/txtVaccineName"
