--- a/app/src/main/res/layout/fragment_vaccinelist.xml
+++ b/app/src/main/res/layout/fragment_vaccinelist.xml
@@ -5,7 +5,7 @@
     android:id="@+id/vaccinelistFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.VaccineListFragment">
+    tools:context=".fragments.secondActivity.VaccineListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvwVaccine"
@@ -14,7 +14,8 @@
         app:layout_constraintBottom_toTopOf="@+id/btnAddVaccine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph_home"/>
 
     <Button
         android:id="@+id/btnAddVaccine"
