--- a/app/src/main/res/layout/fragment_vaccinelist.xml
+++ b/app/src/main/res/layout/fragment_vaccinelist.xml
@@ -5,24 +5,17 @@
     android:id="@+id/vaccinelistFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.secondActivity.VaccineListFragment">
+    tools:context=".fragments.secondActivity.VaccineListFragment"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvwVaccine"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnAddVaccine"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph_home"/>
+        app:navGraph="@navigation/nav_graph_home" />
 
-    <Button
-        android:id="@+id/btnAddVaccine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add vaccine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
