--- a/app/src/main/res/layout/item_vaccine.xml
+++ b/app/src/main/res/layout/item_vaccine.xml
@@ -2,13 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:background="@drawable/layout_border"
-    android:padding="16dp"
     android:id="@+id/itemLayout"
-    app:navGraph="@navigation/nav_graph_home"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="70dp"
+    android:padding="16dp"
+    app:navGraph="@navigation/nav_graph_home">
 
     <TextView
         android:id="@+id/txtVaccineName"
