--- a/app/src/main/res/layout/fragment_vaccinelist.xml
+++ b/app/src/main/res/layout/fragment_vaccinelist.xml
@@ -5,8 +5,7 @@
     android:id="@+id/vaccinelistFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.secondActivity.VaccineListFragment"
-    >
+    tools:context=".fragments.secondActivity.VaccineListFragment">
 
     <TextView
         android:id="@+id/txtEmptyMessage"
@@ -27,7 +26,7 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
